# homework14

./: Dockerfile  main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
postgres-data/base/16384/: 1247  1249  1259  16412  16413  16419  16421  16423  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  5002  pg_internal.init
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1260  pg_control  pg_internal.init
postgres-data/pg_stat/: pgstat.stat
src/conf/: dburl.py
src/contacts/: models.py
src/db/: connectdb.py
src/repository/: functiondb.py  functionuser.py
src/routes/: auth.py  myrouts.py  users.py
src/schemas/: checkschemas.py  user.py
src/services/: auth_services.py  email_services.py
src/services/templates/: password.html  reset_password_form.html  verify_email.html
src/tests/: conftest.py  test_e2e_auth.py  test_for_functiondb.py  test_for_functionuser.py
